# testgcov

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
testgcov_lib/: CMakeLists.txt  testgcov_lib.cpp  testgcov_lib.h
testgcov_test/: CMakeLists.txt  testgcov_test.cpp
